# fast_api

./: .gitignore  README.md  main.py  pyproject.toml  rep.py
fastapi-project/: main.py  todos.db
fastapi-project/Test_task/: resumes.db  test_task.py
fastapi-project/app/: config.py  constants.py  database.py  deps.py  models.py  router.py  schemas.py  service.py  todos.db  todos.py
fastapi-project/app/tests/: test_sql_db.py
fastapi-project/src/: constants.py  router.py  schemas.py
