[tool.poetry]
name = "pycharmprojects"
version = "0.1.0"
description = ""
authors = ["Dmytro Boiko <dmytroboiko007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
